[gd_scene load_steps=7 format=2]

[ext_resource path="res://Character.gd" type="Script" id=1]
[ext_resource path="res://TamelaUpdated.png" type="Texture" id=2]
[ext_resource path="res://RelationshipModule.gd" type="Script" id=3]
[ext_resource path="res://Utility/TraitChecker.tscn" type="PackedScene" id=4]
[ext_resource path="res://CharacterStats.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 86.2526
height = 199.698

[node name="Character" type="Area2D"]
scale = Vector2( 0.72, 0.68 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -94.1474 ]
}
characterType = 3

[node name="TamelaUpdated" type="Sprite" parent="."]
position = Vector2( 10.6802, 46.4731 )
scale = Vector2( 0.238553, 0.238553 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 67.0
margin_bottom = 20.0
text = "SetOnFire"

[node name="Attack" type="Button" parent="."]
margin_left = 0.459656
margin_top = 49.3162
margin_right = 52.4597
margin_bottom = 69.3162
text = "Attack"

[node name="FasterHealthDrain" type="Button" parent="."]
margin_left = 1.0
margin_top = 25.0
margin_right = 66.0
margin_bottom = 45.0
text = "Remove Fire"

[node name="Tween" type="Tween" parent="."]

[node name="RelationshipModule" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TraitChecker" parent="." instance=ExtResource( 4 )]

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( -194.444, -352.941 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( -194.444, -352.941 )

[node name="CharacterStats" parent="." instance=ExtResource( 5 )]
margin_left = -216.111
margin_top = -411.765
margin_right = -216.111
margin_bottom = -411.765
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="area_entered" from="." to="." method="_on_Character_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Character_area_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="FasterHealthDrain" to="." method="_on_FasterHealthDrain_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
